@@ -1,4 +1,4 @@
-/**
+/*
  * Copyright (C) 2014 - present by OpenGamma Inc. and the OpenGamma group of companies
  *
  * Please see distribution for license.
@@ -7,7 +7,9 @@ package com.opengamma.strata.pricer.swap;
 
 import static com.opengamma.strata.basics.currency.MultiCurrencyAmount.toMultiCurrencyAmount;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.function.ToDoubleBiFunction;
 
@@ -23,6 +25,7 @@ import com.opengamma.strata.market.explain.ExplainMap;
 import com.opengamma.strata.market.explain.ExplainMapBuilder;
 import com.opengamma.strata.market.sensitivity.PointSensitivityBuilder;
 import com.opengamma.strata.pricer.rate.RatesProvider;
+import com.opengamma.strata.product.rate.FixedOvernightCompoundedAnnualRateComputation;
 import com.opengamma.strata.product.rate.FixedRateComputation;
 import com.opengamma.strata.product.swap.CompoundingMethod;
 import com.opengamma.strata.product.swap.RateAccrualPeriod;
@@ -176,6 +179,7 @@ public class DiscountingSwapProductPricer {
    * @param swap  the product
    * @param provider  the rates provider
    * @return the par rate
+   * @throws IllegalArgumentException if there is no fixed leg
    */
   public double parRate(ResolvedSwap swap, RatesProvider provider) {
     // find fixed leg
@@ -199,11 +203,20 @@ public class DiscountingSwapProductPricer {
     SwapPaymentPeriod firstPeriod = fixedLeg.getPaymentPeriods().get(0);
     ArgChecker.isTrue(firstPeriod instanceof RatePaymentPeriod, "PaymentPeriod must be instance of RatePaymentPeriod");
     RatePaymentPeriod payment = (RatePaymentPeriod) firstPeriod;
-    if (payment.getAccrualPeriods().size() == 1) { // no compounding
-      // PVBP
-      double pvbpFixedLeg = legPricer.pvbp(fixedLeg, provider);
-      // Par rate
-      return -(otherLegsConvertedPv + fixedLegEventsPv) / pvbpFixedLeg;
+    if (payment.getAccrualPeriods().size() == 1) {
+      RateAccrualPeriod firstAccrualPeriod = payment.getAccrualPeriods().get(0);
+      // check for future value notional
+      if (firstAccrualPeriod.getRateComputation() instanceof FixedOvernightCompoundedAnnualRateComputation) {
+        double accrualFactor = payment.getAccrualPeriods().get(0).getYearFraction();
+        double notional = payment.getNotional();
+        double df = provider.discountFactor(ccyFixedLeg, payment.getPaymentDate());
+        return Math.pow(-otherLegsConvertedPv  / (notional * df) + 1.0d,   1.0 / accrualFactor) - 1.0d;
+      } else { // no compounding
+        // PVBP
+        double pvbpFixedLeg = legPricer.pvbp(fixedLeg, provider);
+        // Par rate
+        return -(otherLegsConvertedPv + fixedLegEventsPv) / pvbpFixedLeg;
+      }
     }
     // try Compounding
     Triple<Boolean, Integer, Double> fixedCompounded = checkFixedCompounded(fixedLeg);
@@ -213,6 +226,47 @@ public class DiscountingSwapProductPricer {
     double df = provider.discountFactor(ccyFixedLeg, payment.getPaymentDate());
     return Math.pow(-(otherLegsConvertedPv + fixedLegEventsPv) / (notional * df) + 1.0d,
         1.0 / fixedCompounded.getSecond()) - 1.0d;
+  }
+
+  /**
+   * Computes the market quote of swaps.
+   * <p>
+   * For swaps with a fixed leg, this is equal to the par rate. For swaps without a fixed leg, this is the 
+   * constant spread on the first leg required to have a PV of 0.
+   * <p>
+   * All the payment periods of the first leg must be of the type {@link RatePaymentPeriod}.
+   * 
+   * @param swap  the product
+   * @param provider  the rates provider
+   * @return the market quote
+   * @throws IllegalArgumentException if there is no fixed leg and not all the payment periods of the first leg
+   *   are of the type RatePaymentPeriod
+   */
+  public double marketQuote(ResolvedSwap swap, RatesProvider provider) {
+    if (!swap.getLegs(SwapLegType.FIXED).isEmpty()) {
+      return parRate(swap, provider);
+    }
+    // For non-fixed first legs: generate a new swap with spread to 0
+    ResolvedSwapLeg referenceLeg = swap.getLegs().get(0);
+    Currency ccyReferenceLeg = referenceLeg.getCurrency();
+    List<SwapPaymentPeriod> paymentPeriods0 = new ArrayList<>();
+    for (SwapPaymentPeriod period : referenceLeg.getPaymentPeriods()) {
+      ArgChecker.isTrue(period instanceof RatePaymentPeriod, "Must be RatePaymentPeriod");
+      RatePaymentPeriod ratePeriod = (RatePaymentPeriod) period;
+      List<RateAccrualPeriod> accrualPeriods0 = new ArrayList<>();
+      for (RateAccrualPeriod accrualPeriod : ratePeriod.getAccrualPeriods()) {
+        accrualPeriods0.add(accrualPeriod.toBuilder().spread(0.0).build());
+      }
+      paymentPeriods0.add(ratePeriod.toBuilder().accrualPeriods(accrualPeriods0).build());
+    }
+    ResolvedSwapLeg referenceLeg0 = referenceLeg.toBuilder().paymentPeriods(paymentPeriods0).build();
+    double convertedPvOtherLegs = 0.0;
+    for (int i = 1; i < swap.getLegs().size(); i++) {
+      convertedPvOtherLegs += legPricer.presentValue(swap.getLegs().get(i), ccyReferenceLeg, provider).getAmount();
+    }
+    double convertedPvLeg0 = legPricer.presentValue(referenceLeg0, provider).getAmount();
+    double pvbp = legPricer.pvbp(referenceLeg, provider);
+    return -(convertedPvOtherLegs + convertedPvLeg0) / pvbp;
   }
 
   /**
@@ -228,35 +282,33 @@ public class DiscountingSwapProductPricer {
    * @return the par rate
    */
   public double parSpread(ResolvedSwap swap, RatesProvider provider) {
+    // does the fixed leg, if it exists, of the swap have a future value notional
+    if (!swap.getLegs(SwapLegType.FIXED).isEmpty()) {
+      ResolvedSwapLeg fixedLeg = fixedLeg(swap);
+      Optional<FixedOvernightCompoundedAnnualRateComputation> annualRateCompOpt = findAnnualRateComputation(fixedLeg);
+      if (annualRateCompOpt.isPresent()) {
+        return parRate(swap, provider) - annualRateCompOpt.get().getRate();
+      }
+    }
     ResolvedSwapLeg referenceLeg = swap.getLegs().get(0);
     Currency ccyReferenceLeg = referenceLeg.getCurrency();
-    if (referenceLeg.getPaymentPeriods().size() > 1) { // try multiperiod par-spread
-      double convertedPv = presentValue(swap, ccyReferenceLeg, provider).getAmount();
-      double pvbp = legPricer.pvbp(referenceLeg, provider);
-      return -convertedPv / pvbp;
-    }
-    SwapPaymentPeriod firstPeriod = referenceLeg.getPaymentPeriods().get(0);
-    ArgChecker.isTrue(firstPeriod instanceof RatePaymentPeriod, "PaymentPeriod must be instance of RatePaymentPeriod");
-    RatePaymentPeriod payment = (RatePaymentPeriod) firstPeriod;
-    if (payment.getAccrualPeriods().size() == 1) { // no compounding
-      double convertedPv = presentValue(swap, ccyReferenceLeg, provider).getAmount();
-      // PVBP
-      double pvbpFixedLeg = legPricer.pvbp(referenceLeg, provider);
-      // Par rate
-      return -convertedPv / pvbpFixedLeg;
-    }
-    // try Compounding
+    // try one payment compounding, typically for inflation swaps
     Triple<Boolean, Integer, Double> fixedCompounded = checkFixedCompounded(referenceLeg);
-    ArgChecker.isTrue(fixedCompounded.getFirst(),
-        "Swap should have a fixed leg and for one payment it should be based on compunding witout spread.");
-    double df = provider.discountFactor(ccyReferenceLeg, referenceLeg.getPaymentPeriods().get(0).getPaymentDate());
+    if (fixedCompounded.getFirst()) {
+      double df = provider.discountFactor(ccyReferenceLeg, referenceLeg.getPaymentPeriods().get(0).getPaymentDate());
+      double convertedPv = presentValue(swap, ccyReferenceLeg, provider).getAmount();
+      double referenceConvertedPv = legPricer.presentValue(referenceLeg, provider).getAmount();
+      double notional = ((RatePaymentPeriod) referenceLeg.getPaymentPeriods().get(0)).getNotional();
+      double parSpread =
+          Math.pow(-(convertedPv - referenceConvertedPv) / (df * notional) + 1.0d, 1.0d / fixedCompounded.getSecond()) -
+              (1.0d + fixedCompounded.getThird());
+      return parSpread;
+
+    }
+    // In other cases, try the standard multiperiod par spread
     double convertedPv = presentValue(swap, ccyReferenceLeg, provider).getAmount();
-    double referenceConvertedPv = legPricer.presentValue(referenceLeg, provider).getAmount();
-    double notional = ((RatePaymentPeriod) referenceLeg.getPaymentPeriods().get(0)).getNotional();
-    double parSpread =
-        Math.pow(-(convertedPv - referenceConvertedPv) / (df * notional) + 1.0d, 1.0d / fixedCompounded.getSecond()) -
-            (1.0d + fixedCompounded.getThird());
-    return parSpread;
+    double pvbp = legPricer.pvbp(referenceLeg, provider);
+    return -convertedPv / pvbp;
   }
 
   //-------------------------------------------------------------------------
@@ -334,6 +386,7 @@ public class DiscountingSwapProductPricer {
    * @param swap  the product
    * @param provider  the rates provider
    * @return the par rate curve sensitivity of the swap product
+   * @throws IllegalArgumentException if there is no fixed leg
    */
   public PointSensitivityBuilder parRateSensitivity(ResolvedSwap swap, RatesProvider provider) {
     ResolvedSwapLeg fixedLeg = fixedLeg(swap);
@@ -345,6 +398,29 @@ public class DiscountingSwapProductPricer {
         double pvLocal = legPricer.presentValueInternal(leg, provider);
         otherLegsConvertedPv += (pvLocal * provider.fxRate(leg.getCurrency(), ccyFixedLeg));
       }
+    }
+    // does the fixed leg have a future value notional
+    Optional<FixedOvernightCompoundedAnnualRateComputation> annualRateCompOpt = findAnnualRateComputation(fixedLeg);
+    if (annualRateCompOpt.isPresent()) {
+      RatePaymentPeriod payment = (RatePaymentPeriod) fixedLeg.getPaymentPeriods().get(0);
+      double af = annualRateCompOpt.get().getAccrualFactor();
+      double notional = payment.getNotional();
+      double df = provider.discountFactor(ccyFixedLeg, payment.getPaymentDate());
+      double otherLegsConvertedPvBar = -Math.pow(-otherLegsConvertedPv  / (notional * df) + 1.0d, 1.0 / af - 1.0d) / (af * notional * df);
+      double dfBar = Math.pow(
+          -otherLegsConvertedPv / (notional * df) + 1.0d, 1.0 / af - 1.0d) * otherLegsConvertedPv / (af * notional * df * df);
+      PointSensitivityBuilder otherLegsConvertedPvDr = PointSensitivityBuilder.none();
+      for (ResolvedSwapLeg leg : swap.getLegs()) {
+        if (leg != fixedLeg) {
+          PointSensitivityBuilder pvLegDr = getLegPricer().presentValueSensitivity(leg, provider)
+              .multipliedBy(provider.fxRate(leg.getCurrency(), ccyFixedLeg));
+          otherLegsConvertedPvDr = otherLegsConvertedPvDr.combinedWith(pvLegDr);
+        }
+      }
+      otherLegsConvertedPvDr = otherLegsConvertedPvDr.withCurrency(ccyFixedLeg);
+      PointSensitivityBuilder dfDr = provider.discountFactors(
+          ccyFixedLeg).zeroRatePointSensitivity(fixedLeg.getPaymentPeriods().get(0).getPaymentDate());
+      return dfDr.multipliedBy(dfBar).combinedWith(otherLegsConvertedPvDr.multipliedBy(otherLegsConvertedPvBar));
     }
     double fixedLegEventsPv = legPricer.presentValueEventsInternal(fixedLeg, provider);
     double pvbpFixedLeg = legPricer.pvbp(fixedLeg, provider);
@@ -369,6 +445,68 @@ public class DiscountingSwapProductPricer {
   }
 
   /**
+   * Computes the market quote curve sensitivity for swaps.
+   * <p>
+   * For swaps with a fixed leg, this is equal to the par rate. For swaps without a fixed leg, this is the 
+   * constant spread on the first leg required to have a PV of 0.
+   * <p>
+   * All the payment periods of the first leg must be of the type {@link RatePaymentPeriod}.
+   * <p>
+   * The figures are reported in the currency of the first leg, even if in theory they should be dimensionless.
+   * 
+   * @param swap  the product
+   * @param provider  the rates provider
+   * @return the par rate curve sensitivity of the swap product
+   * @throws IllegalArgumentException if there is no fixed leg and not all the payment periods of the first leg
+   *   are of the type RatePaymentPeriod
+   */
+  public PointSensitivityBuilder marketQuoteSensitivity(ResolvedSwap swap, RatesProvider provider) {
+    if (!swap.getLegs(SwapLegType.FIXED).isEmpty()) {
+      return parRateSensitivity(swap, provider);
+    }
+    // For non-fixed first legs: generate a new swap with spread to 0
+    ResolvedSwapLeg referenceLeg = swap.getLegs().get(0);
+    Currency ccyReferenceLeg = referenceLeg.getCurrency();
+    List<SwapPaymentPeriod> paymentPeriods0 = new ArrayList<>();
+    for (SwapPaymentPeriod period : referenceLeg.getPaymentPeriods()) {
+      ArgChecker.isTrue(period instanceof RatePaymentPeriod, "Must be RatePaymentPeriod");
+      RatePaymentPeriod ratePeriod = (RatePaymentPeriod) period;
+      List<RateAccrualPeriod> accrualPeriods0 = new ArrayList<>();
+      for (RateAccrualPeriod accrualPeriod : ratePeriod.getAccrualPeriods()) {
+        accrualPeriods0.add(accrualPeriod.toBuilder().spread(0.0).build());
+      }
+      paymentPeriods0.add(ratePeriod.toBuilder().accrualPeriods(accrualPeriods0).build());
+    }
+    ResolvedSwapLeg referenceLeg0 = referenceLeg.toBuilder().paymentPeriods(paymentPeriods0).build();
+
+    double convertedPvOtherLegs = 0.0;
+    for (int i = 1; i < swap.getLegs().size(); i++) {
+      convertedPvOtherLegs += legPricer.presentValue(swap.getLegs().get(i), ccyReferenceLeg, provider).getAmount();
+    }
+    double convertedPvLeg0 = legPricer.presentValue(referenceLeg0, provider).getAmount();
+    double pvbp = legPricer.pvbp(referenceLeg, provider);
+    // double marketQuote = -(convertedPvOtherLegs + convertedPvLeg0) / pvbp;
+    // Backward sweep
+    double marketQuoteBar = 1.0d;
+    double convertedPvOtherLegsBar = -marketQuoteBar / pvbp;
+    double convertedPvLeg0Bar = -marketQuoteBar / pvbp;
+    double pvbpBar = (convertedPvOtherLegs + convertedPvLeg0) / (pvbp * pvbp) * marketQuoteBar;
+    PointSensitivityBuilder dconvertedPvLeg0dr = legPricer.presentValueSensitivity(referenceLeg0, provider);
+    PointSensitivityBuilder dconvertedPvOtherLegsdr = PointSensitivityBuilder.none();
+    for (int i = 1; i < swap.getLegs().size(); i++) {
+      ResolvedSwapLeg leg = swap.getLegs().get(i);
+      dconvertedPvOtherLegsdr = dconvertedPvOtherLegsdr.combinedWith(
+          legPricer.presentValueSensitivity(leg, provider)
+              .multipliedBy(provider.fxRate(leg.getCurrency(), ccyReferenceLeg))
+              .withCurrency(ccyReferenceLeg));
+    }
+    PointSensitivityBuilder dpvbpdr = legPricer.pvbpSensitivity(referenceLeg, provider);
+    return dconvertedPvLeg0dr.multipliedBy(convertedPvLeg0Bar)
+        .combinedWith(dconvertedPvOtherLegsdr.multipliedBy(convertedPvOtherLegsBar))
+        .combinedWith(dpvbpdr.multipliedBy(pvbpBar));
+  }
+
+  /**
    * Calculates the par spread curve sensitivity for a swap.
    * <p>
    * The par spread is the common spread on all payments of the first leg for which the total swap present value is 0.
@@ -381,46 +519,41 @@ public class DiscountingSwapProductPricer {
    * @return the par spread curve sensitivity of the swap product
    */
   public PointSensitivityBuilder parSpreadSensitivity(ResolvedSwap swap, RatesProvider provider) {
+    // does the fixed leg of the swap, if it exists, have a future value notional
+    if (!swap.getLegs(SwapLegType.FIXED).isEmpty()) {
+      ResolvedSwapLeg fixedLeg = fixedLeg(swap);
+      Optional<FixedOvernightCompoundedAnnualRateComputation> annualRateCompOpt = findAnnualRateComputation(fixedLeg);
+      if (annualRateCompOpt.isPresent()) {
+        return parRateSensitivity(swap, provider);
+      }
+    }
     ResolvedSwapLeg referenceLeg = swap.getLegs().get(0);
     Currency ccyReferenceLeg = referenceLeg.getCurrency();
     double convertedPv = presentValue(swap, ccyReferenceLeg, provider).getAmount();
     PointSensitivityBuilder convertedPvDr = presentValueSensitivity(swap, ccyReferenceLeg, provider);
-    if (referenceLeg.getPaymentPeriods().size() > 1) { // try multiperiod par-spread
-      double pvbp = legPricer.pvbp(referenceLeg, provider);
-      // Backward sweep
-      double convertedPvBar = -1d / pvbp;
-      double pvbpBar = convertedPv / (pvbp * pvbp);
-      PointSensitivityBuilder pvbpDr = legPricer.pvbpSensitivity(referenceLeg, provider);
-      return convertedPvDr.multipliedBy(convertedPvBar).combinedWith(pvbpDr.multipliedBy(pvbpBar));
-    }
-    SwapPaymentPeriod firstPeriod = referenceLeg.getPaymentPeriods().get(0);
-    ArgChecker.isTrue(firstPeriod instanceof RatePaymentPeriod, "PaymentPeriod must be instance of RatePaymentPeriod");
-    RatePaymentPeriod payment = (RatePaymentPeriod) firstPeriod;
-    if (payment.getAccrualPeriods().size() == 1) { // no compounding
-      // PVBP
-      double pvbp = legPricer.pvbp(referenceLeg, provider);
-      // Backward sweep
-      double convertedPvBar = -1d / pvbp;
-      double pvbpBar = convertedPv / (pvbp * pvbp);
-      PointSensitivityBuilder pvbpDr = legPricer.pvbpSensitivity(referenceLeg, provider);
-      return convertedPvDr.multipliedBy(convertedPvBar).combinedWith(pvbpDr.multipliedBy(pvbpBar));
-    }
-    // try Compounding
+    // try one payment compounding, typically for inflation swaps
     Triple<Boolean, Integer, Double> fixedCompounded = checkFixedCompounded(referenceLeg);
-    ArgChecker.isTrue(fixedCompounded.getFirst(),
-        "Swap should have a fixed leg and for one payment it should be based on compunding witout spread.");
-    double df = provider.discountFactor(ccyReferenceLeg, referenceLeg.getPaymentPeriods().get(0).getPaymentDate());
-    PointSensitivityBuilder dfDr = provider.discountFactors(ccyReferenceLeg)
-        .zeroRatePointSensitivity(referenceLeg.getPaymentPeriods().get(0).getPaymentDate());    
-    double referenceConvertedPv = legPricer.presentValue(referenceLeg, provider).getAmount();
-    PointSensitivityBuilder referenceConvertedPvDr = legPricer.presentValueSensitivity(referenceLeg, provider);
-    double notional = ((RatePaymentPeriod) referenceLeg.getPaymentPeriods().get(0)).getNotional();
-    PointSensitivityBuilder DparSpreadDr = 
-        convertedPvDr.combinedWith(referenceConvertedPvDr.multipliedBy(-1)).multipliedBy(-1.0d / (df * notional))
-        .combinedWith(dfDr.multipliedBy((convertedPv - referenceConvertedPv) / (df * df * notional)))
-        .multipliedBy( 1.0d / fixedCompounded.getSecond() *
-        Math.pow(-(convertedPv - referenceConvertedPv) / (df * notional) + 1.0d, 1.0d / fixedCompounded.getSecond() - 1.0d));
-    return DparSpreadDr;
+    if (fixedCompounded.getFirst()) {
+      double df = provider.discountFactor(ccyReferenceLeg, referenceLeg.getPaymentPeriods().get(0).getPaymentDate());
+      PointSensitivityBuilder dfDr = provider.discountFactors(ccyReferenceLeg)
+          .zeroRatePointSensitivity(referenceLeg.getPaymentPeriods().get(0).getPaymentDate());
+      double referenceConvertedPv = legPricer.presentValue(referenceLeg, provider).getAmount();
+      PointSensitivityBuilder referenceConvertedPvDr = legPricer.presentValueSensitivity(referenceLeg, provider);
+      double notional = ((RatePaymentPeriod) referenceLeg.getPaymentPeriods().get(0)).getNotional();
+      PointSensitivityBuilder dParSpreadDr =
+          convertedPvDr.combinedWith(referenceConvertedPvDr.multipliedBy(-1)).multipliedBy(-1.0d / (df * notional))
+              .combinedWith(dfDr.multipliedBy((convertedPv - referenceConvertedPv) / (df * df * notional)))
+              .multipliedBy(1.0d / fixedCompounded.getSecond() *
+                  Math.pow(-(convertedPv - referenceConvertedPv) / (df * notional) + 1.0d,
+                      1.0d / fixedCompounded.getSecond() - 1.0d));
+      return dParSpreadDr;
+    }
+    double pvbp = legPricer.pvbp(referenceLeg, provider);
+    // Backward sweep
+    double convertedPvBar = -1d / pvbp;
+    double pvbpBar = convertedPv / (pvbp * pvbp);
+    PointSensitivityBuilder pvbpDr = legPricer.pvbpSensitivity(referenceLeg, provider);
+    return convertedPvDr.multipliedBy(convertedPvBar).combinedWith(pvbpDr.multipliedBy(pvbpBar));
   }
 
   //-------------------------------------------------------------------------
@@ -491,6 +624,19 @@ public class DiscountingSwapProductPricer {
     return ce;
   }
 
+  // finds a fixed overnight compounded annual rate computation if present
+  private Optional<FixedOvernightCompoundedAnnualRateComputation> findAnnualRateComputation(ResolvedSwapLeg fixedLeg) {
+    SwapPaymentPeriod firstPeriod = fixedLeg.getPaymentPeriods().get(0);
+    if (firstPeriod instanceof RatePaymentPeriod) {
+      RatePaymentPeriod payment = (RatePaymentPeriod) firstPeriod;
+      RateAccrualPeriod firstAccrualPeriod = payment.getAccrualPeriods().get(0);
+      if (firstAccrualPeriod.getRateComputation() instanceof FixedOvernightCompoundedAnnualRateComputation) {
+        return Optional.of((FixedOvernightCompoundedAnnualRateComputation) firstAccrualPeriod.getRateComputation());
+      }
+    }
+    return Optional.empty();
+  }
+
   //-------------------------------------------------------------------------
   // checking that at least one leg is a fixed leg and returning the first one
   private ResolvedSwapLeg fixedLeg(ResolvedSwap swap) {
@@ -500,13 +646,13 @@ public class DiscountingSwapProductPricer {
     }
     return fixedLegs.get(0);
   }
-  
+
   // Checks if the leg is a fixed leg with one payment and compounding
   // This type of leg is used in zero-coupon inflation swaps
   // When returning a 'true' for the first element, the second element is the number of periods which are used in 
   //   par rate/spread computation and the third element is the common fixed rate
   private Triple<Boolean, Integer, Double> checkFixedCompounded(ResolvedSwapLeg leg) {
-    if(leg.getPaymentEvents().size() != 0) {
+    if (leg.getPaymentEvents().size() != 0) {
       return Triple.of(false, 0, 0.0d); // No event
     }
     RatePaymentPeriod ratePaymentPeriod = (RatePaymentPeriod) leg.getPaymentPeriods().get(0);
